--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WEBSTUDIO</title>
+    <title>MainPage</title>
     <link rel="stylesheet" href="./css/style.css">
   </head>
 
@@ -20,7 +20,7 @@
             <a href="">Studio</a>
           </li>
           <li>
-            <a href="">Portfolio</a>
+            <a href="./portfolio.html">Portfolio</a>
           </li>
           <li><a href="">Contacts</a></li>
         </ul>
