--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <!--Fonts Link-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!--Custom Styles-->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
     <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
+      <nav class="nav">
+        <a href="./index.html" class="nav-text"
+          ><span class="link-text">WEB</span>STUDIO</a
+        >
 
         <ul>
           <li>
@@ -88,6 +98,72 @@
               />
               <h2>Meditation App</h2>
               <p>App</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/img_4.jpg"
+                alt="hands on the steering wheel"
+                width="360"
+              />
+              <h2>Taxi Service</h2>
+              <p>Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/img_5.jpg"
+                alt="options of illustration design on the display"
+                width="360"
+              />
+              <h2>Screen Illustrations</h2>
+              <p>Design</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/img_6.jpg"
+                alt="the girl is watching on the phone display"
+                width="360"
+              />
+              <h2>Online Courses</h2>
+              <p>Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/img_7.jpg"
+                alt="the concept options for instagram"
+                width="360"
+              />
+              <h2>Instagram Stories Concept</h2>
+              <p>Design</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/img_8.jpg"
+                alt="food in the white bag"
+                width="360"
+              />
+              <h2>Organic Food</h2>
+              <p>Web Site</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/img_9.jpg"
+                alt="the cup of coffee in the hand"
+                width="360"
+              />
+              <h2>Fresh Coffee</h2>
+              <p>Web Site</p>
             </a>
           </li>
         </ul>
