--- a/index.html
+++ b/index.html
@@ -5,15 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MainPage</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <!--Fonts Link-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!--Custom Styles-->
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
     <!--Header section-->
 
     <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
+      <nav class="nav">
+        <a href="./index.html" class="nav-text"
+          ><span class="link-text">WEB</span>STUDIO</a
+        >
 
         <ul>
           <li>
