--- a/index.html
+++ b/index.html
@@ -21,27 +21,33 @@
 
     <header>
       <nav class="nav">
-        <a href="./index.html" class="nav-text"
-          ><span class="link-text">WEB</span>STUDIO</a
+        <a href="./index.html" class="logo-studio"
+          ><span class="logo-web">WEB</span>STUDIO</a
         >
 
-        <ul>
-          <li>
-            <a href="">Studio</a>
+        <ul class="list">
+          <li class="list-item">
+            <a href="" class="list-link">Studio</a>
           </li>
-          <li>
-            <a href="./portfolio.html">Portfolio</a>
+          <li class="list-item">
+            <a href="./portfolio.html" class="list-link">Portfolio</a>
           </li>
-          <li><a href="">Contacts</a></li>
+          <li class="list-item">
+            <a href="" class="list-link">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <address class="contacts">
+        <ul class="list">
+          <li class="contacts-item">
+            <a href="mailto:info@devstudio.com" class="contacts-link"
+              >info@devstudio.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="contacts-item">
+            <a href="tel:+110001111111" class="contacts-link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -49,39 +55,39 @@
 
     <main>
       <!--Hero section-->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero-section">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-btn">Order Service</button>
       </section>
 
       <!--Features section1-->
-      <section>
-        <h2>WEBSTUDIO PRESENTATION</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="features-section">
+        <h2 hidden>WEBSTUDIO PRESENTATION</h2>
+        <ul class="list">
+          <li class="features-item">
+            <h3 class="features-title">Strategy</h3>
+            <p class="features-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-title">Punctuality</h3>
+            <p class="features-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-title">Diligence</h3>
+            <p class="features-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-title">Technologies</h3>
+            <p class="features-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -90,24 +96,24 @@
       </section>
 
       <!--Images section2-->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
+      <section class="images-section">
+        <h2 class="title-secondlevel">What are we doing</h2>
+        <ul class="list">
+          <li class="images-item">
             <img
               src="./images/main-page/images-section2/img1.jpg"
               alt="the monitor shows the personal account"
               width="360"
             />
           </li>
-          <li>
+          <li class="images-item">
             <img
               src="./images/main-page/images-section2/img2.jpg"
               alt="the phone display design"
               width="360"
             />
           </li>
-          <li>
+          <li class="images-item">
             <img
               src="./images/main-page/images-section2/img3.jpg"
               alt="the phone in the hand"
@@ -118,57 +124,59 @@
       </section>
 
       <!--Team section3-->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team-section">
+        <h2 class="title-secondlevel">Our Team</h2>
+        <ul class="list">
+          <li class="team-item">
             <img
               src="./images/main-page/team-section3/Mark_Guerrero_1.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="title-thirdlevel">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/main-page/team-section3/Tom_Ford_2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title-thirdlevel">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/main-page/team-section3/Camila_Garcia_3.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="title-thirdlevel">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/main-page/team-section3/Daniel_Wilson_4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="title-thirdlevel">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <!--Footer section-->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer-section">
+      <a href="./index.html" class="logo-studio-footer">
+        <span class="logo-web">WEB</span>STUDIO</a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
