--- a/portfolio.html
+++ b/portfolio.html
@@ -17,161 +17,174 @@
   </head>
 
   <body>
+    <!--Header section-->
     <header>
       <nav class="nav">
-        <a href="./index.html" class="nav-text"
-          ><span class="link-text">WEB</span>STUDIO</a
+        <a href="./index.html" class="logo-studio"
+          ><span class="logo-web">WEB</span>STUDIO</a
         >
 
-        <ul>
-          <li>
-            <a href="./index.html">Studio</a>
+        <ul class="list">
+          <li class="list-item">
+            <a href="./index.html" class="list-link">Studio</a>
           </li>
-          <li>
-            <a href="">Portfolio</a>
+          <li class="list-item">
+            <a href="" class="list-link">Portfolio</a>
           </li>
-          <li><a href="">Contacts</a></li>
+          <li class="list-item">
+            <a href="" class="list-link">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <address class="contacts">
+        <ul class="list">
+          <li class="contacts-item">
+            <a href="mailto:info@devstudio.com" class="contacts-link"
+              >info@devstudio.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="contacts-item">
+            <a href="tel:+110001111111" class="contacts-link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
     <main>
       <!--Portfolio section-->
-      <section>
-        <h1>Portfolio section</h1>
-        <ul>
-          <li>
-            <button type="button">All</button>
+      <section class="portfolio-section">
+        <h1 hidden>Portfolio section</h1>
+        <ul class="list">
+          <li class="portfolio-item">
+            <button type="button" class="portfolio-btn">All</button>
           </li>
-          <li>
-            <button type="button">Web Site</button>
+          <li class="portfolio-item">
+            <button type="button" class="portfolio-btn">Web Site</button>
           </li>
-          <li>
-            <button type="button">App</button>
+          <li class="portfolio-item">
+            <button type="button" class="portfolio-btn">App</button>
           </li>
-          <li>
-            <button type="button">Design</button>
+          <li class="portfolio-item">
+            <button type="button" class="portfolio-btn">Design</button>
           </li>
-          <li>
-            <button type="button">Marketing</button>
+          <li class="portfolio-item">
+            <button type="button" class="portfolio-btn">Marketing</button>
           </li>
         </ul>
 
-        <ul>
-          <li>
-            <a href="">
+        <ul class="list">
+          <li class="portfolio-pics">
+            <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio/img_1.jpg"
                 alt="options of interface concept"
                 width="360"
               />
-              <h2>Banking App Interface Concept</h2>
-              <p>App</p>
+              <h2 class="portfolio-secondlevel">
+                Banking App Interface Concept
+              </h2>
+              <p class="portfolio-text">App</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="portfolio-pics">
+            <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio/img_2.jpg"
                 alt="scanning QR-code having held phone"
                 width="360"
               />
-              <h2>Cashless Payment</h2>
-              <p>Marketing</p>
+              <h2 class="portfolio-secondlevel">Cashless Payment</h2>
+              <p class="portfolio-text">Marketing</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="portfolio-pics">
+            <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio/img_3.jpg"
                 alt="notebook computer and phone"
                 width="360"
               />
-              <h2>Meditation App</h2>
-              <p>App</p>
+              <h2 class="portfolio-secondlevel">Meditation App</h2>
+              <p class="portfolio-text">App</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="portfolio-pics">
+            <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio/img_4.jpg"
                 alt="hands on the steering wheel"
                 width="360"
               />
-              <h2>Taxi Service</h2>
-              <p>Marketing</p>
+              <h2 class="portfolio-secondlevel">Taxi Service</h2>
+              <p class="portfolio-text">Marketing</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="portfolio-pics">
+            <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio/img_5.jpg"
                 alt="options of illustration design on the display"
                 width="360"
               />
-              <h2>Screen Illustrations</h2>
-              <p>Design</p>
+              <h2 class="portfolio-secondlevel">Screen Illustrations</h2>
+              <p class="portfolio-text">Design</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="portfolio-pics">
+            <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio/img_6.jpg"
                 alt="the girl is watching on the phone display"
                 width="360"
               />
-              <h2>Online Courses</h2>
-              <p>Marketing</p>
+              <h2 class="portfolio-secondlevel">Online Courses</h2>
+              <p class="portfolio-text">Marketing</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="portfolio-pics">
+            <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio/img_7.jpg"
                 alt="the concept options for instagram"
                 width="360"
               />
-              <h2>Instagram Stories Concept</h2>
-              <p>Design</p>
+              <h2 class="portfolio-secondlevel">Instagram Stories Concept</h2>
+              <p class="portfolio-text">Design</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="portfolio-pics">
+            <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio/img_8.jpg"
                 alt="food in the white bag"
                 width="360"
               />
-              <h2>Organic Food</h2>
-              <p>Web Site</p>
+              <h2 class="portfolio-secondlevel">Organic Food</h2>
+              <p class="portfolio-text">Web Site</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="portfolio-pics">
+            <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio/img_9.jpg"
                 alt="the cup of coffee in the hand"
                 width="360"
               />
-              <h2>Fresh Coffee</h2>
-              <p>Web Site</p>
+              <h2 class="portfolio-secondlevel">Fresh Coffee</h2>
+              <p class="portfolio-text">Web Site</p>
             </a>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+
+    <!--Footer section-->
+    <footer class="footer-section">
+      <a href="./index.html" class="logo-studio-footer">
+        <span class="logo-web">WEB</span>STUDIO</a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
