--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <header>
       <nav class="nav">
-        <a href="./index.html" class="logo-studio"
+        <a href="./index.html" class="logo-studio link"
           ><span class="logo-web">WEB</span>STUDIO</a
         >
 
@@ -173,7 +173,7 @@
 
     <!--Footer section-->
     <footer class="footer-section">
-      <a href="./index.html" class="logo-studio-footer">
+      <a href="./index.html" class="logo-studio-footer link">
         <span class="logo-web">WEB</span>STUDIO</a
       >
       <p class="footer-text">
