--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
     <!--Header section-->
     <header>
       <nav class="nav">
-        <a href="./index.html" class="logo-studio"
+        <a href="./index.html" class="logo-studio link"
           ><span class="logo-web">WEB</span>STUDIO</a
         >
 
@@ -181,7 +181,7 @@
 
     <!--Footer section-->
     <footer class="footer-section">
-      <a href="./index.html" class="logo-studio-footer">
+      <a href="./index.html" class="logo-studio-footer link">
         <span class="logo-web">WEB</span>STUDIO</a
       >
       <p class="footer-text">
