--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <header>
       <nav class="nav">
         <a href="./index.html" class="logo-studio link"
-          ><span class="logo-web">WEB</span>STUDIO</a
-        >
+          ><span class="logo-web variable-color-web">WEB</span>
+          <span class="variable-color-studio">STUDIO</span>
+        </a>
 
         <ul class="list">
           <li class="list-item">
@@ -174,8 +175,10 @@
     <!--Footer section-->
     <footer class="footer-section">
       <a href="./index.html" class="logo-studio-footer link">
-        <span class="logo-web">WEB</span>STUDIO</a
-      >
+        <span class="logo-web variable-color-web">WEB</span>
+
+        <span class="variable-color-studio">STUDIO</span>
+      </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
