--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,10 @@
     <header>
       <nav class="nav">
         <a href="./index.html" class="logo-studio link"
-          ><span class="logo-web">WEB</span>STUDIO</a
-        >
+          ><span class="logo-web">WEB</span>
+
+          <span>STUDIO</span>
+        </a>
 
         <ul class="list">
           <li class="list-item">
@@ -182,8 +184,10 @@
     <!--Footer section-->
     <footer class="footer-section">
       <a href="./index.html" class="logo-studio-footer link">
-        <span class="logo-web">WEB</span>STUDIO</a
-      >
+        <span class="logo-web">WEB</span>
+
+        <span>STUDIO</span>
+      </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
