--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
     <header>
       <nav class="nav">
-        <a href="./index.html" class="logo-studio link"
-          ><span class="logo-web variable-color-web">WEB</span>
-          <span class="variable-color-studio">STUDIO</span>
+        <a href="./index.html" class="logo-web variable-color-web link"
+          >WEB
+          <span class="logo-studio variable-color-studio link">STUDIO</span>
         </a>
 
         <ul class="list">
           <li class="list-item">
-            <a href="" class="list-link">Studio</a>
+            <a href="./index.html" class="list-link">Studio</a>
           </li>
           <li class="list-item">
             <a href="./portfolio.html" class="list-link">Portfolio</a>
@@ -174,10 +174,10 @@
 
     <!--Footer section-->
     <footer class="footer-section">
-      <a href="./index.html" class="logo-studio-footer link">
+      <a href="./index.html" class="link">
         <span class="logo-web variable-color-web">WEB</span>
 
-        <span class="variable-color-studio">STUDIO</span>
+        <span class="logo-studio-footer variable-color-studio">STUDIO</span>
       </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
