--- a/portfolio.html
+++ b/portfolio.html
@@ -20,10 +20,9 @@
     <!--Header section-->
     <header>
       <nav class="nav">
-        <a href="./index.html" class="logo-studio link"
-          ><span class="logo-web">WEB</span>
-
-          <span>STUDIO</span>
+        <a href="./index.html" class="logo-web variable-color-web link"
+          >WEB
+          <span class="logo-studio variable-color-studio link">STUDIO</span>
         </a>
 
         <ul class="list">
