--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <nav class="nav">
         <a href="./index.html" class="logo-web variable-color-web link"
           >WEB
-          <span class="logo-studio variable-color-studio link">STUDIO</span>
+          <span class="logo-studio variable-color-studio link">Studio</span>
         </a>
 
         <ul class="list">
