--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
 
     <!--Footer section-->
     <footer class="footer-section">
-      <a href="./index.html" class="link">
-        <span class="logo-web variable-color-web">WEB</span>
+      <a href="./index.html" class="logo-web variable-color-web link">
+        WEB
 
-        <span class="logo-studio-footer variable-color-studio">STUDIO</span>
+        <span class="logo-studio-footer variable-color-footer">Studio</span>
       </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
