--- a/portfolio.html
+++ b/portfolio.html
@@ -182,10 +182,10 @@
 
     <!--Footer section-->
     <footer class="footer-section">
-      <a href="./index.html" class="logo-studio-footer link">
-        <span class="logo-web">WEB</span>
+      <a href="./index.html" class="logo-web variable-color-web link">
+        WEB
 
-        <span>STUDIO</span>
+        <span class="logo-studio-footer variable-color-footer">Studio</span>
       </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
