--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
 
         <ul class="list">
           <li class="list-item">
-            <a href="./index.html" class="list-link">Studio</a>
+            <a href="./index.html" class="list-link link">Studio</a>
           </li>
           <li class="list-item">
-            <a href="./portfolio.html" class="list-link">Portfolio</a>
+            <a href="./portfolio.html" class="list-link link">Portfolio</a>
           </li>
           <li class="list-item">
-            <a href="" class="list-link">Contacts</a>
+            <a href="" class="list-link link">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="contacts">
         <ul class="list">
           <li class="contacts-item">
-            <a href="mailto:info@devstudio.com" class="contacts-link"
+            <a href="mailto:info@devstudio.com" class="contacts-link link"
               >info@devstudio.com</a
             >
           </li>
           <li class="contacts-item">
-            <a href="tel:+110001111111" class="contacts-link"
+            <a href="tel:+110001111111" class="contacts-link link"
               >+11 (000) 111-11-11</a
             >
           </li>
