--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       <!--Features section1-->
       <section class="features-section">
-        <h2 hidden>WEBSTUDIO PRESENTATION</h2>
+        <h2 hidden class="hidden-features-title">WEBSTUDIO PRESENTATION</h2>
         <ul class="list">
           <li class="features-item">
             <h3 class="features-title">Strategy</h3>
