--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
 
         <ul class="list">
           <li class="portfolio-pics">
-            <a href="" class="portfolio-link">
+            <a href="./images/portfolio/img_1.jpg" class="portfolio-link link">
               <img
                 src="./images/portfolio/img_1.jpg"
                 alt="options of interface concept"
@@ -89,7 +89,7 @@
             </a>
           </li>
           <li class="portfolio-pics">
-            <a href="" class="portfolio-link">
+            <a href="./images/portfolio/img_2.jpg" class="portfolio-link link">
               <img
                 src="./images/portfolio/img_2.jpg"
                 alt="scanning QR-code having held phone"
