--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
             </a>
           </li>
           <li class="portfolio-pics">
-            <a href="" class="portfolio-link">
+            <a href="./images/portfolio/img_3.jpg" class="portfolio-link link">
               <img
                 src="./images/portfolio/img_3.jpg"
                 alt="notebook computer and phone"
@@ -111,7 +111,7 @@
             </a>
           </li>
           <li class="portfolio-pics">
-            <a href="" class="portfolio-link">
+            <a href="./images/portfolio/img_4.jpg" class="portfolio-link link">
               <img
                 src="./images/portfolio/img_4.jpg"
                 alt="hands on the steering wheel"
@@ -122,7 +122,7 @@
             </a>
           </li>
           <li class="portfolio-pics">
-            <a href="" class="portfolio-link">
+            <a href="./images/portfolio/img_5.jpg" class="portfolio-link link">
               <img
                 src="./images/portfolio/img_5.jpg"
                 alt="options of illustration design on the display"
@@ -133,7 +133,7 @@
             </a>
           </li>
           <li class="portfolio-pics">
-            <a href="" class="portfolio-link">
+            <a href="./images/portfolio/img_6.jpg" class="portfolio-link link">
               <img
                 src="./images/portfolio/img_6.jpg"
                 alt="the girl is watching on the phone display"
@@ -144,7 +144,7 @@
             </a>
           </li>
           <li class="portfolio-pics">
-            <a href="" class="portfolio-link">
+            <a href="./images/portfolio/img_7.jpg" class="portfolio-link link">
               <img
                 src="./images/portfolio/img_7.jpg"
                 alt="the concept options for instagram"
@@ -155,7 +155,7 @@
             </a>
           </li>
           <li class="portfolio-pics">
-            <a href="" class="portfolio-link">
+            <a href="./images/portfolio/img_8.jpg" class="portfolio-link link">
               <img
                 src="./images/portfolio/img_8.jpg"
                 alt="food in the white bag"
@@ -166,7 +166,7 @@
             </a>
           </li>
           <li class="portfolio-pics">
-            <a href="" class="portfolio-link">
+            <a href="./images/portfolio/img_9.jpg" class="portfolio-link link">
               <img
                 src="./images/portfolio/img_9.jpg"
                 alt="the cup of coffee in the hand"
