--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <header>
       <nav class="nav">
         <a href="./index.html" class="logo-web variable-color-web link"
-          >WEB
-          <span class="logo-studio variable-color-studio link">Studio</span>
+          >WEB<span class="logo-studio variable-color-studio link">Studio</span>
         </a>
 
         <ul class="list">
@@ -175,9 +174,7 @@
     <!--Footer section-->
     <footer class="footer-section">
       <a href="./index.html" class="logo-web variable-color-web link">
-        WEB
-
-        <span class="logo-studio-footer variable-color-footer">Studio</span>
+        WEB<span class="logo-studio-footer variable-color-footer">Studio</span>
       </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
