--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+
+    <!--Modern-normalize-->
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!--Custom Styles-->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -62,7 +72,7 @@
 
       <!--Features section1-->
       <section class="features-section">
-        <h2 hidden class="hidden-features-title">WEBSTUDIO PRESENTATION</h2>
+        <h2 class="visually-hidden">WEBSTUDIO PRESENTATION</h2>
         <ul class="list">
           <li class="features-item">
             <h3 class="features-title">Strategy</h3>
