--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,15 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <!--Modern-normalize-->
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!--Custom Styles-->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -54,7 +63,7 @@
     <main>
       <!--Portfolio section-->
       <section class="portfolio-section">
-        <h1 hidden>Portfolio section</h1>
+        <h1 class="visually-hidden">Portfolio section</h1>
         <ul class="list">
           <li class="portfolio-item">
             <button type="button" class="portfolio-btn">All</button>
